force-app/main/default/objects/Medical_Debt__c/Medical_Debt__c.object-meta.xml
<CustomObject>
    <label>Medical Debt</label>
    <nameField>
        <label>Medical Debt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Debts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>