force-app/main/default/objects/Medical_Debt__c/fields/Estimated_Current_Weekly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Current_Weekly_Payment__c</fullName>
    <formula>IF(
ISBLANK(TEXT(Frequency__c)),
Weekly_Payment__c,
CASE(
TEXT(Frequency__c),
&quot;Daily&quot;, Weekly_Payment__c * 5,
&quot;Weekly&quot;, Weekly_Payment__c,
&quot;Bi-Weekly&quot;, Weekly_Payment__c / 2.165,
&quot;Semi-Monthly&quot;, Weekly_Payment__c / 2,
&quot;Monthly&quot;, Weekly_Payment__c / 4.33,
Weekly_Payment__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Current Weekly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>