force-app/main/default/objects/Medical_Debt__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Medical Debts</relationshipLabel>
    <relationshipName>Medical_Debts</relationshipName>
    <type>Lookup</type>
</CustomField>