force-app/main/default/objects/Medical_Debt__c/fields/Weekly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Payment__c</fullName>
    <label>Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>